--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,19 +13,18 @@ on:
   pull_request:
     branches: [ "main" ]
 
-# missing permision
-permissions:
-  contents: read
-  deployments: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout code using PAT with full permissions
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.FULL_ACCESS_TOKEN }}
 
+      # Set up JDK 17 and cache Maven dependencies
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -33,12 +32,11 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      # Build the project
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
       # Upload dependency snapshot to GitHub Dependency Graph
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-
-
-
+        # مع PAT كامل الصلاحيات، مش محتاج permissions هنا
